# DLT-ARTCHAIN

./: .env  .gitignore  Cargo.toml  README.md  build.sh  foundry.toml  main.rs
broadcast/Deploy.s.sol/31337/: run-latest.json
broadcast/DeployScript.s.sol/11155111/dry-run/: run-latest.json
cache/: solidity-files-cache.json  test-failures
cache/DeployScript.s.sol/11155111/dry-run/: run-1754995032.json
cloud-fabric/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_spec.yaml  demo.sh  jest.config.js  package.json  stop-service.sh  tsconfig.json
cloud-fabric/adapters/: bigchaindb_adapter.d.ts  bigchaindb_adapter.d.ts.map  bigchaindb_adapter.js  bigchaindb_adapter.ts
cloud-fabric/integrations/: ethereum_adapter.d.ts  ethereum_adapter.d.ts.map  ethereum_adapter.js  ethereum_adapter.ts
cloud-fabric/k8s/: configmap.yaml  deployment.yaml
cloud-fabric/services/: cloud_fabric_service.d.ts  cloud_fabric_service.d.ts.map  cloud_fabric_service.js  cloud_fabric_service.ts
cloud-fabric/src/: demo-data.ts  demo-mode.ts  index.ts
cloud-fabric/src/config/: index.ts
cloud-fabric/src/types/: auction.ts
cloud-fabric/tests/: auction.test.ts  integration.test.ts
script/: Deploy.s.sol  DeployScript.s.sol  package.json  tsconfig.json
script/src/src/: index.ts
src/: ArtChainNFT.sol
test/: ArtChainNFT.t.sol
